# all-in-one-mlx

./: CHANGELOG.md  MANIFEST.in  README.md  pyproject.toml
.github/workflows/: ci.yml  release-pypi.yml  release-testpypi.yml
claude-reports/: FINAL_OPTIMIZATION_REPORT.md  OPTIMIZATION_COMPLETE.md  OPTIMIZED_DBN_INTEGRATION.md  OPTIMIZED_SPECTROGRAM_INTEGRATION.md  REFACTOR_PLAN.md  REFACTOR_SUMMARY.md  TIMING_INVESTIGATION_REPORT.md
mlx-weights/: harmonix-fold0_mlx.npz  harmonix-fold0_mlx.yaml  harmonix-fold1_mlx.npz  harmonix-fold1_mlx.yaml  harmonix-fold2_mlx.npz  harmonix-fold2_mlx.yaml  harmonix-fold3_mlx.npz  harmonix-fold3_mlx.yaml  harmonix-fold4_mlx.npz  harmonix-fold4_mlx.yaml  harmonix-fold5_mlx.npz  harmonix-fold5_mlx.yaml  harmonix-fold6_mlx.npz  harmonix-fold6_mlx.yaml  harmonix-fold7_mlx.npz  harmonix-fold7_mlx.yaml
scripts/: build_dbn_cpp.py  compare_beat_parity.py  compare_spec_backends.py  compare_spectrogram_parity.py  convert_allinone_weights_to_mlx.py
src/all_in_one_mlx/: __init__.py
src/allin1_mlx/: __about__.py  __init__.py  analyze.py  cli.py  config.py  demix.py  helpers.py  sonify.py  spectrogram.py  typings.py  visualize.py
src/allin1_mlx/models/: __init__.py  allinone_mlx.py  dinat_mlx.py  ensemble_mlx.py  loaders_mlx.py  utils_mlx.py
src/allin1_mlx/postprocessing/: __init__.py  _viterbi_cpp.cpp  _viterbi_cython.c  dbn_native.py  functional_mlx.py  helpers.py  metrical_mlx.py  setup_cython.py
tests/: test_analyze.py  test_demix_determinism.py  test_edge_cases.py  test_json_formatting.py  test_mlx_env.py  test_mlx_inference.py  test_runtime_shim.py  test_sonify.py  test_spec_fast_guard.py  test_spectrogram_backends.py  test_visualize.py
